--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 <body>
     <header>
         <h1>en tete</h1>
+        <h2>un teste de niveau deux</h2>
     </header>
     <footer>
         <h1>le pied de page</h1>
