--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <header>
         <h1>en tete</h1>
         <h2>un teste de niveau deux</h2>
+        <h3>un teste de niveau 2</h3>
     </header>
     <footer>
         <h1>le pied de page</h1>
